--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Document</title>
+    <title>Mars</title>
   </head>
   <body>
-    <a class="bot" href="#botton"><strong>Part one</strong></a>
-    <a class="bot" href="#botton2"><strong>Part two</strong></a>
-    <a class="bot" href="#botton3"><strong>Shuttles</strong></a>
 
-    <div class="divic">
+    <header>
+      <nav class="bot123">
+        <a class="bot" href="#botton"><strong>Part one</strong></a>
+        <a class="bot" href="#botton2"><strong>Part two</strong></a>
+        <a class="bot" href="#botton3"><strong>Shuttles</strong></a>
+      </nav>
+      <div class="divic">
       <h1>Human mission to Mars</h1>
     </div>
+     </header>
 
     <hr />
 
@@ -30,17 +34,18 @@
       </p>
     </div>
 
-    <img
-      src="./images/OSIRIS_Mars_true_color.jpeg"
-      alt="Mars_true_color"
-      class="photo"
-    />
+    <a 
+    href="https://www.mars.com/"
+    target="_blank">
+      <img 
+        src="./images/OSIRIS_Mars_true_color.jpeg"
+        alt="Mars_true_color"
+        class="photo"
+       />
+    </a>
 
-    <div class="divic">
+    <article>
       <h2 id="botton2">Exploration of Mars</h2>
-    </div>
-
-    <div class="divic">
       <p>
         The exploration of Mars has been a goal of national space programs for
         decades. Conceptual work for missions that would involve human explorers
@@ -59,7 +64,7 @@
         missions to Mars.[citation needed] In fiction, Mars is a frequent target
         of exploration and settlement in books, graphic novels, and films.
       </p>
-    </div>
+    </article>
 
     <div class="shutel">
       <h2 id="botton3">Mars shuttles</h2>
@@ -77,9 +82,25 @@
       </ul>
     </div>
     <hr>
-    <p>If you learning more?</p>
- <span><a class="nasa" target="_blank" href=https://www.nasa.gov>N.A.S.A</a></span>
- <p><em> More about the mission to Mars - visit the NASA website</em></p>
-    
+
+    <aside>
+      <p><em>Our contacts</em></p>
+
+      <nav>
+        <p><a href="tel:+13-13-13"><em>+13-13-13</em></a></p>
+        <p><a href="mailto:marsalloda@gmail.com"><em>marsalloda@gmail.com</em></a></p>
+      </nav>
+
+    </aside>
+
+   <footer>
+     <p>If you learning more?</p>
+      <nav>
+        <span>
+           <a class="nasa" target="_blank" href=https://www.nasa.gov><em>N.A.S.A</em></a>
+        </span>
+     </nav>
+     <p><em> More about the mission to Mars - visit the NASA website</em></p>
+  </footer>
   </body>
 </html>
