--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         starting terraforming of the planet.
       </p>
     </div>
-
+  
     <a 
     href="https://www.mars.com/"
     target="_blank">
       <img 
         src="./images/OSIRIS_Mars_true_color.jpeg"
         alt="Mars_true_color"
-        class="photo"
+        class="wrapper"
        />
     </a>
 
