--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </a>
 
     <article>
-      <h2 id="botton2">Exploration of Mars</h2>
-      <p>
+      <h2>Exploration of Mars</h2>
+      <p class="text2">
         The exploration of Mars has been a goal of national space programs for
         decades. Conceptual work for missions that would involve human explorers
         has been ongoing since <strong>the 1950s</strong>, with planned missions
