--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <hr />
 
-    <div class="divic">
+    <div class="text2">
       <p id="botton">
         A human mission to Mars has been the subject of science fiction since
         the 1880s, and of aerospace engineering and scientific proposals
@@ -45,7 +45,7 @@
     </a>
 
     <article>
-      <h2>Exploration of Mars</h2>
+      <h2 id="botton2">Exploration of Mars</h2>
       <p class="text2">
         The exploration of Mars has been a goal of national space programs for
         decades. Conceptual work for missions that would involve human explorers
@@ -66,7 +66,7 @@
       </p>
     </article>
 
-    <div class="shutel">
+    <div class="text2">
       <h2 id="botton3">Mars shuttles</h2>
       <p>There are shuttles that was on Mars</p>
       <ul>
