--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <hr />
 
-    <div class="text2">
+    <div>
       <p id="botton">
         A human mission to Mars has been the subject of science fiction since
         the 1880s, and of aerospace engineering and scientific proposals
@@ -46,7 +46,7 @@
 
     <article>
       <h2 id="botton2">Exploration of Mars</h2>
-      <p class="text2">
+      <p>
         The exploration of Mars has been a goal of national space programs for
         decades. Conceptual work for missions that would involve human explorers
         has been ongoing since <strong>the 1950s</strong>, with planned missions
@@ -66,7 +66,7 @@
       </p>
     </article>
 
-    <div class="text3">
+    <div>
       <h2 id="botton3">Mars shuttles</h2>
       <p>There are shuttles that was on Mars</p>
       <ul>
