--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <hr />
 
     <div>
-      <p id="botton">
+      <p id="botton" class="text2">
         A human mission to Mars has been the subject of science fiction since
         the 1880s, and of aerospace engineering and scientific proposals
         <strong>since the late 1940s</strong>. Plans include landing on Mars for
@@ -45,7 +45,7 @@
     </a>
 
     <article>
-      <h2 id="botton2">Exploration of Mars</h2>
+      <h2 id="botton2" class="text2">Exploration of Mars</h2>
       <p>
         The exploration of Mars has been a goal of national space programs for
         decades. Conceptual work for missions that would involve human explorers
