--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Mars</title>
   </head>
   <body>
+    <div class="main-cont">
 
     <header>
       <nav class="bot123">
@@ -67,19 +68,22 @@
     </article>
 
     <div>
+      
       <h2 id="botton3">Mars shuttles</h2>
       <p>There are shuttles that was on Mars</p>
-      <ul>
-        <li>Mars 3</li>
-        <li>Viking 1 and Viking 2</li>
-        <li>Mars Pathfinder and its Sojourner rover</li>
-        <li>Spirit and Opportunity rovers</li>
-        <li>Phoenix lander</li>
-        <li>Curiosity rover</li>
-        <li>InSight lander</li>
-        <li>Beagle2</li>
-        <li>Perseverance rover</li>
-      </ul>
+      <nav>
+       <ul>
+         <li>Mars 3</li>
+         <li>Viking 1 and Viking 2</li>
+         <li>Mars Pathfinder and its Sojourner rover</li>
+          <li>Spirit and Opportunity rovers</li>
+          <li>Phoenix lander</li>
+          <li>Curiosity rover</li>
+          <li>InSight lander</li>
+          <li>Beagle2</li>
+          <li>Perseverance rover</li>
+       </ul>
+      </nav>
     </div>
     <hr>
 
@@ -93,7 +97,7 @@
 
     </aside>
 
-   <footer>
+       <footer>
      <p>If you learning more?</p>
       <nav>
         <span>
@@ -101,6 +105,7 @@
         </span>
      </nav>
      <p><em> More about the mission to Mars - visit the NASA website</em></p>
-  </footer>
+      </footer>
+    </div>
   </body>
 </html>
